cmake_minimum_required(VERSION 3.10)
project(CppCode)

set(CMAKE_CXX_STANDARD 11)

add_executable(demo Code/demo.c)
add_executable(partI Code/PartI.c)
add_executable(partII Code/partII.c)
add_executable(partIII Code/partIII.c)
add_executable(partIV Code/partIV.c)
add_executable(partV Code/partV.c)
add_executable(partVI Code/partVI.c Code/myStr.c Code/myStr.h)
add_executable(partVII Code/partVII.c)
add_executable(partVIII Code/partVIII.c)
add_executable(partIX Code/partIX.c)
add_executable(List Code/List.c Code/ListFun.c Code/ListFun.h)
add_executable(SuShu Code/SuShu.c)
add_executable(voteCount Code/voteCount.c)
add_executable(file fileCode/file.c)
add_executable(fileMul fileCode/fileMul.c)
add_executable(filter fileCode/filter.c)
add_executable(AEadd fileCode/AEadd.c)
add_executable(fileBin fileCode/fileBin.c)
add_executable(fileList fileCode/fileList.c)
add_executable(filePoffset fileCode/filePoffset.c)
add_executable(fileSort  fileCode/fileSort.c)
add_executable(bitOper  Code/bitOper.c)
